--- a/package.json
+++ b/package.json
@@ -6,21 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static",
+    "pages:watch": "npx @cloudflare/next-on-pages --watch",
+    "pages:dev": "npx wrangler pages dev .vercel/output/static --compatibility-date=2023-06-21 --compatibility-flag=nodejs_compat"
   },
   "dependencies": {
+    "@cloudflare/next-on-pages": "^1.13.2",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
+    "colord": "^2.9.3",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.441.0",
+    "next": "14.2.9",
+    "next-intl": "^3.19.1",
+    "next-pwa": "^5.6.0",
+    "next-sitemap": "^4.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
-    "next": "14.2.9"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "clsx": "^2.1.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.9"
+    "eslint-config-next": "14.2.9",
+    "postcss": "^8",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5",
+    "vercel": "^37.4.2"
   }
 }
